Ajout configuration date