@@ -1,6 +1,5 @@
 package com.alltech.pepites;
 
-import com.alltech.PepiteDto;
 import com.alltech.exception.ResourceNotFoundException;
 import com.alltech.repository.PepiteRepository;
 import org.springframework.dao.EmptyResultDataAccessException;
@@ -8,6 +7,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -19,28 +19,44 @@ public class PepiteService {
         this.pepiteRepository = pepiteRepository;
     }
 
-    public Optional<Pepite> savePepite(PepiteDto pepiteDto) {
-        Pepite pepite = Pepite.builder()
-                .dateNaissance(pepiteDto.getDateNaissance())
-                .nom(pepiteDto.getNom())
-                .prenom(pepiteDto.getPrenom()).build();
-
-        return Optional.of(pepiteRepository.save(pepite));
+    private PepiteDto convertToDto(Pepite pepite) {
+        return PepiteDto.builder()
+                .id(pepite.getId())
+                .nom(pepite.getNom())
+                .prenom(pepite.getPrenom())
+                .dateNaissance(pepite.getDateNaissance())
+                .build();
     }
 
-    public List<Pepite> getAllPepites() {
+    private Pepite convertToEntity(PepiteDto dto) {
+        return Pepite.builder()
+                .nom(dto.getNom())
+                .prenom(dto.getPrenom())
+                .dateNaissance(dto.getDateNaissance())
+                .build();
+    }
+
+    public Optional<PepiteDto> savePepite(PepiteDto pepiteDto) {
+        Pepite pepite = convertToEntity(pepiteDto);
+        Pepite saved = pepiteRepository.save(pepite);
+        return Optional.of(convertToDto(saved));
+    }
+
+    public List<PepiteDto> getAllPepites() {
         return StreamSupport.stream(pepiteRepository.findAll().spliterator(), true)
-                .toList();
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
     }
 
-    public Optional<Pepite> updatePepite(PepiteDto pepiteDto, Long id) {
-        Optional<Pepite> pepiteRepo = Optional.of(pepiteRepository.findById(id)).get();
-        if (pepiteRepo.isPresent()) {
-            Pepite pepite1 = pepiteRepo.get();
-            pepite1.setNom(pepiteDto.getNom());
-            pepite1.setPrenom(pepiteDto.getNom());
-            pepite1.setDateNaissance(pepiteDto.getDateNaissance());
-            return Optional.of(pepiteRepository.save(pepite1));
+    public Optional<PepiteDto> updatePepite(PepiteDto pepiteDto, Long id) {
+        Optional<Pepite> pepiteFromRepo = pepiteRepository.findById(id);
+        if (pepiteFromRepo.isPresent()) {
+            Pepite pepiteToUpdate = pepiteFromRepo.get();
+            pepiteToUpdate.setNom(pepiteDto.getNom());
+            pepiteToUpdate.setPrenom(pepiteDto.getPrenom());
+            pepiteToUpdate.setDateNaissance(pepiteDto.getDateNaissance());
+            Pepite updated = pepiteRepository.save(pepiteToUpdate);
+            return Optional.of(convertToDto(updated));
         }
         return Optional.empty();
     }
@@ -51,6 +67,10 @@ public class PepiteService {
         } catch (EmptyResultDataAccessException e) {
             throw new ResourceNotFoundException("Pepite not found with id : " + id);
         }
-
     }
+    public Optional<PepiteDto> get(Long id) {
+        Optional<Pepite> pepite = pepiteRepository.findById(id);
+        return pepite.map(this::convertToDto);
+    }
+
 }
